# transcribeperfex

./: .gitignore  CMakeLists.txt
cli/: AsioDeps.h  CMakeLists.txt  growing_onions.raw  growing_potatoes2.raw  main.cpp
